# ilab_group01-01

./: .gitignore  Attention_Transformer.ipynb  Attention_Transformer_Niketh (2).ipynb  Attention_Transformer_Niketh- PatchGan (2).ipynb  Attention_Transformer_Niketh- PatchGan-No Mask (1).ipynb  Attention_Transformer_Niketh- PatchGan_New.ipynb  Attention_Transformer_Niketh- PatchGan_v2 (2).ipynb  Makefile  Merge.py  README.md  UNet_Niketh- PatchGaN-v2.1 (2).ipynb  UNet_Niketh- PatchGaN-v2.ipynb  preprocess.py  pyproject.toml  requirment.txt  run.bat  st_theme.py
API/: model_api.py  pyproject.toml  unet_niketh_patchgan_model.py
UI/: README.md  app.py  pyproject.toml
UI/pages/: admin.py  main.py
UI/saved_records/: details.txt
backend/: .env.example  db.sqlite3  manage.py  requirements.txt
backend/backend/: settings.py  urls.py
backend/core/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py
frontend/: requirements.txt  streamlit_app.py
frontend/pages/: 2_Demo.py
ilab_group01_01/: __init__.py  dataset.py  features.py  plots.py
ilab_group01_01/API/: model_api.py
ilab_group01_01/UI/: app.py
ilab_group01_01/UI/pages/: admin.py  main.py  test.py
ilab_group01_01/modeling/: predict.py  train.py
models/: UNet_Niketh- PatchGaN-Model.ipynb
notebooks/: UNet_Niketh- PatchGaN-Model.ipynb
