[project]
name = "ilab-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Siheng Mu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "face-alignment (>=1.4.1,<2.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "torchmetrics (>=1.8.2,<2.0.0)",
    "lpips (>=0.1.4,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
