[project]
name = "ilab-ui"
version = "0.1.0"
description = ""
authors = [
    {name = "Siheng Mu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "streamlit-image-comparison (>=0.0.4,<0.0.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
